[package]
name = "nav-types"
version = "0.5.0"
authors = ["Jørgen Nordmoen <nordmoen90@gmail.com>"]
description = "Easily work with global positions and vectors"
edition = "2018"

homepage = "https://github.com/nordmoen/nav-types"
repository = "https://github.com/nordmoen/nav-types.git"
documentation = "https://docs.rs/nav-types/"

keywords = ["nav", "navigation", "ecef", "latitude", "wgs84"]
license = "MIT"

[dependencies]
nalgebra = "0.21"
serde = {version = "1.0.105", optional = true, features = ["serde_derive"]}

[dev-dependencies]
assert = "0.7"
quickcheck = "0.9.2"
rand = "0.7.3"

[features]
default = []
dev = []
